# ChangeLog for net-misc/qtnx
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/qtnx/ChangeLog,v 1.6 2009/10/06 17:25:09 ayoy Exp $

  06 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qtnx-0.9.ebuild:
  Removed alternative dependency on Qt metapackage

  08 Mar 2009; Markus Meier <maekke@gentoo.org> ChangeLog:
  amd64/x86 stable, bug #256414

  05 Jun 2008; Peter Volkov <pva@gentoo.org> qtnx-0.9.ebuild:
  amd64 stable, bug #222967.

  04 Jun 2008; Bernard Cafarelli <voyageur@gentoo.org> qtnx-0.9.ebuild:
  Actually depend on qt-4 (both monolithic and splitted versions), thanks pva

  29 May 2008; Christian Faulhammer <opfer@gentoo.org> qtnx-0.9.ebuild:
  x86 stable, bug #222967

*qtnx-0.9 (14 Mar 2008)

  14 Mar 2008; Bernard Cafarelli <voyageur@gentoo.org> +metadata.xml,
  +qtnx-0.9.ebuild:
  Initial version, from NX overlay and bug #213210
