@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST freenx-client-0.9.tar.bz2 46240 RMD160 5877799311afaed8def94f167955171a08248e1f SHA1 cbe7f4d4c83e435d74192a07290a42cd42cb6242 SHA256 dfc6c8dd89c26171411d8f7fa92613004eb8947ff509459151fdb03de7fe9608
-EBUILD qtnx-0.9.ebuild 846 RMD160 b25c25320d583b034e77792881d14bef155480e3 SHA1 da046920820d6983cfd5166b4db4ba6c4693f2f4 SHA256 7d4b4692c38213e1d5daad81486c60e34d987f5344220a582a0720ab00247ca7
-MISC ChangeLog 916 RMD160 669e018912bafcca0a4d21d16277e8c57cb08ec5 SHA1 5a912611c215d483b6af84071997d5eceff6bc70 SHA256 c7d9b44239635d1fe23c2a2d55e4ea4c9950681943e1b3cb3f80cfed2c1ac527
+EBUILD qtnx-0.9.ebuild 776 RMD160 d3d1bf070fba3fa71ea8a5226aa6a505ad78244a SHA1 0b3ffd815feb3bc5c4aa04add22eef049fc4733c SHA256 db928eefb9678975a0ad52c9b72a705120465e47d2e006cd5da98c1668b1839e
+MISC ChangeLog 1062 RMD160 6716a8789fe1ec186c1f32c376720acdbbe4d42e SHA1 652fa0d3beb99a762576e399652157b0078207c9 SHA256 d06a0531360010d5a762564dd3b1357658e25739e029d9a874eb6826d4a1fed1
 MISC metadata.xml 224 RMD160 27adf3c7b5433f534d7ab6476e6afbb33cfd5ae6 SHA1 5a3e532469b00d1271cf61ce707e5987cb38ee31 SHA256 837a7a5b7fc01e7ff828ae2d0fa9c6838e7fa3ae73be7a96d8497464a9e489d2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAkrLfX4ACgkQ+CZEqwt+F6ZcggCfRk0msa8yJ9yfqPpPb42Rd7pG
-e7wAnjx8EvI2trA1s+j12mgnCGyzaOjw
-=MrGC
+iF4EAREIAAYFAk91cUUACgkQFYEBGcdFJfJNCwEAoFmhtEsBd3+ImAyh/hdhgSBg
+u2qxpWYBpNVqGqSWFFkA/j2ywGojbY8GtbGLmmIRMyJ8jFALWMRBI6rEI23mVbij
+=AWiL
 -----END PGP SIGNATURE-----
