@@ -1,11 +1,12 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/qtnx/qtnx-0.9.ebuild,v 1.5 2009/10/06 17:25:09 ayoy Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/qtnx/qtnx-0.9.ebuild,v 1.6 2012/03/30 08:39:22 voyageur Exp $
 
-EAPI="1"
-inherit qt4
+EAPI="4"
+inherit qt4-r2
 
 MY_P="freenx-client-${PV}"
+
 DESCRIPTION="A Qt-based NX client using nxcl"
 HOMEPAGE="http://developer.berlios.de/projects/freenx/"
 SRC_URI="mirror://berlios/freenx/${MY_P}.tar.bz2"
@@ -19,17 +20,11 @@ DEPEND="net-misc/nxcl
 	x11-libs/qt-core:4
 	x11-libs/qt-gui:4"
 RDEPEND="${DEPEND}"
+
 S="${WORKDIR}/${MY_P}/${PN}"
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
+src_prepare() {
 	sed -i -e "s#id\.key#/usr/share/${PN}/id.key#" qtnxwindow.cpp || die "sed failed"
-}
-
-src_compile() {
-	eqmake4
-	emake || die "Make failed"
 }
 
 src_install() {
