@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/qtnx
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/qtnx/ChangeLog,v 1.6 2009/10/06 17:25:09 ayoy Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/qtnx/ChangeLog,v 1.7 2012/03/30 08:39:22 voyageur Exp $
+
+  30 Mar 2012; Bernard Cafarelli <voyageur@gentoo.org> qtnx-0.9.ebuild:
+  Migrate to qt4-r2 eclass, thanks Michael Kensington in bug #410169
 
   06 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qtnx-0.9.ebuild:
   Removed alternative dependency on Qt metapackage
